[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/Main_screen_button.gd" type="Script" id=1]
[ext_resource path="res://assets/UI/Block_switch_button.png" type="Texture" id=2]
[ext_resource path="res://assets/UI/Block_switch_pressed.png" type="Texture" id=3]
[ext_resource path="res://assets/UI/Main_button_left.png" type="Texture" id=4]
[ext_resource path="res://assets/UI/Main_button_left_pressed.png" type="Texture" id=5]
[ext_resource path="res://assets/UI/Main_button_right.png" type="Texture" id=6]
[ext_resource path="res://assets/UI/Main_button_right_pressed.png" type="Texture" id=7]

[node name="Main_screen_button" type="Control"]

anchor_left = 0.0
anchor_top = 1.0
anchor_right = 0.0
anchor_bottom = 1.0
margin_top = -458.0
margin_right = 750.0
rect_min_size = Vector2( 750, 458 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )
_sections_unfolded = [ "Rect" ]
__meta__ = {
"_edit_group_": true
}

[node name="Buttons" type="VBoxContainer" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="Top" type="HBoxContainer" parent="Buttons" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 754.0
margin_bottom = 100.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="Container" type="Container" parent="Buttons/Top" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 285.0
margin_bottom = 100.0
rect_min_size = Vector2( 285, 100 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Rect" ]

[node name="Block_switch" type="TextureButton" parent="Buttons/Top" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 289.0
margin_right = 469.0
margin_bottom = 100.0
rect_min_size = Vector2( 180, 100 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
stretch_mode = 4
_sections_unfolded = [ "Grow Direction", "Margin", "Rect", "Textures" ]

[node name="Bottom" type="HBoxContainer" parent="Buttons" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 104.0
margin_right = 754.0
margin_bottom = 458.0
rect_min_size = Vector2( 750, 354 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Rect" ]

[node name="Button_Left" type="TextureButton" parent="Buttons/Bottom" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 375.0
margin_bottom = 354.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
_sections_unfolded = [ "Textures" ]

[node name="Button_right" type="TextureButton" parent="Buttons/Bottom" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 379.0
margin_right = 754.0
margin_bottom = 354.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )
_sections_unfolded = [ "Margin", "Textures" ]


